# software-runtime-diagnostics

./: CMakeLists.txt  README.md  main.c  platforms.cmake
hello_world/: CMakeLists.txt  print_hello_world.c  print_hello_world.h
runtime_diagnostics/: CMakeLists.txt  runtime_diagnostics.c  runtime_diagnostics.h
runtime_diagnostics/tests/: CMakeLists.txt  runtime_diagnostics_test_access.h  test_print_hello_world.cpp  test_runtime_diagnostics.cpp
